syntax = "proto3";

package blocks;

service BlocksService {
  rpc GetBlockInfo (BlockRequest) returns (BlockInfo);
  rpc GetBlocksInfo (BlocksRequest) returns (BlocksResponse);
  rpc GetTransactionLogs (TxRequest) returns (LogsResponse);
  rpc UpdateBlockCache (BlockRequest) returns (BlockInfo);
  rpc PrepareTransaction (PrepareTransactionRequest) returns (PrepareTransactionResponse);
}

message BlockInfo {
  int32 id = 1;
  string owner = 2;
  int32 color = 3;
  string price = 4;
  string priceWei = 5;
}

message BlockRequest {
  int32 blockId = 1;
}

message BlocksRequest {
  int32 startId = 1;
  int32 endId = 2;
}

message BlocksResponse {
  repeated BlockInfo blocks = 1;
}

message TransactionResponse {
  string hash = 1;
}

message TxRequest {
  string txHash = 1;
}

message LogsResponse {
  repeated string logs = 1;
}

message PrepareTransactionRequest {
  string action = 1;  // "buy", "setColor", "setPrice"
  int32 blockId = 2;
  optional int32 color = 3;
  optional string price = 4;
}

message PrepareTransactionResponse {
  string data = 1;
} 